--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 
 	<HEAD>
 	 
-        <title>PC Building Guide</title>
-		  
+        	<title>PC Building Guide</title>
+	  	<link rel="stylesheet" type="text/css" href="styles.css" />
 	</HEAD>
 
 		<BODY>
 	 
         <h1>Building Your Own PC</h1>
 
-		<p>
+		<div class="standard-paragraph2">
 
 		Most people will look at a computer and see a machine that they feel is way too advanced for them to
 		understand. I'm going to show you how relatively simple it is and how to do it yourself. I will be
 		focusing on desktop Computers.
 			
-		</p>
+		</div>
 
         <h2>All parts necessary</h2>
 		
-		<ul>
+		<ul class="standard-paragraph">
 		
 		<li>Case</li>
 		<li>CPU</li>
